--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "typescript_practice",
   "private": true,
   "version": "0.0.0",
+  "homepage": ".",
   "type": "module",
   "scripts": {
     "dev": "vite",
