--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "typescript_practice",
   "private": true,
   "version": "0.0.0",
-  "homepage": "./dist",
   "type": "module",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
